--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.assignment.knowunitytodolist">
+    package="com.example.todo_list">
    <application
-        android:label="knowunitytodolist"
+        android:label="todo_list"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
