--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # for MVVM implementation
+  stacked: ^3.0.0
   cupertino_icons: ^1.0.2
   json_annotation: ^4.6.0
   dio: ^4.0.6
